--- a/src/common/styles/_template.scss
+++ b/src/common/styles/_template.scss
@@ -14,3 +14,13 @@
   align-items: center;
 }
 
+%light {
+  background-color: bisque;
+  color: midnightblue;
+}
+
+
+%dark {
+  background-color: midnightblue;
+  color: bisque;
+}
